# AlgoLab

./: .gitignore  README.md
week1/: CMakeLists.txt
week1/solutions/: 1_built_the_sum.cpp  2_dominoes.cpp  3_even_pairs.cpp  4_even_matrices.cpp  test.cpp
week2/: CMakeLists.txt
week2/solutions/: 1_beach_bars.cpp  2_burning_coins.cpp  3_search_snippets.cpp  4_the_big_game.cpp  deck_of_cards.cpp  test.cpp
week3/: CMakeLists.txt
week3/solutions/: San FranSisco.md  ant_challenge.cpp  buddy_selection.cpp  first_steps_bgl.cpp  important_bridges.cpp  san_francisco.cpp
week4/: CMakeLists.txt
week4/solutions/: antenna.cpp  firsthit.cpp  greyjoy.cpp  hiking-maps.cpp  hit.cpp
week5/: CMakeLists.txt
week5/solutions/: boats.cpp  moving_books.cpp
week6/: CMakeLists.txt
week6/solutions/: diet.cpp  inball.cpp  suez.cpp  suez.md  test.cpp  what_is_the_maximum.cpp
week7/: CMakeLists.txt
week7/solutions/: coint_tossing_tournament.cpp  london.cpp  shopping_trip.cpp  tiles.cpp
week8/: CMakeLists.txt
week8/solutions/: bistro.cpp  germs.cpp  light_the_stage.cpp
week9/: CMakeLists.txt
week9/solutions/: algocoon.cpp  casino_royale.cpp  placing_knights.cpp  real_estate_market.cpp
